# UselessShell

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  UselessShell.sln  UselessShell.vcxproj  UselessShell.vcxproj.filters  cpp.hint  default.nix  resource.h  us.aps  us.rc
include/: ansi_codes.h  base.h  cmd_defs.h  cmd_impls.h  cmd_macros.h  us_impl.h  useless_shell.h  util.h
include/util/: escape_codes.h  files.h  input.h  misc.h  output.h  string.h  terminal.h
lib/: Md5.c  Md5.h  salieri.h
src/: ansi_codes.c  cmd_defs.c  cmd_impls.c  main.c  us_impl.c  useless_shell.c  util.c
src/util/: files.c  input.c  misc.c  string.c  terminal.c
